--- a/final/templates/extra.html
+++ b/final/templates/extra.html
@@ -3,12 +3,11 @@
 
   <body>
     <form method="post" action="/extra">
-      <label for="box">Enter of poltical party:</label>
+      <label for="box">Enter of Company:</label>
       <input name="boxes" type="text" />
       <input id="search" type="submit" />
     </form>
     {% if voter_data %}
-    <h1>hi</h1>
     <table style="border-collapse: collapse; width: 100%">
       <thead>
         <tr style="background-color: #f2f2f2">
