--- a/final/templates/four.html
+++ b/final/templates/four.html
@@ -8,6 +8,7 @@
       <input id="search" type="submit" />
     </form>
     {% if voter_data %}
+    <h2>Sum of all values is {{sum}}</h2>
     <table style="border-collapse: collapse; width: 100%">
       <thead>
         <tr style="background-color: #f2f2f2">
