--- a/final/templates/search.html
+++ b/final/templates/search.html
@@ -85,9 +85,8 @@
             {% endif %}
             </tbody>
         </table>
-        {% if no_data %}
-        <h4> Data Not Found</h4>
-        {% endif %}
+        {{no_data}}
+
     </body>
 
 </html>
